feat(event): add event ongoing and finished cycle
